--- a/gettext-runtime/NEWS
+++ b/gettext-runtime/NEWS
@@ -1,4 +1,12 @@
-Version 0.21 - December 2019
+Version 0.21 - April 2020
+
+* On native Windows platforms, the directory that contains the message
+  catalogs may now contain arbitrary Unicode characters. To make use of
+  this feature, use the new function 'wbindtextdomain' instead of
+  'bindtextdomain'. It allows to pass a directory name in wchar_t[] encoding.
+  Note: 'wbindtextdomain' exists only on native Windows platforms.
+
+Version 0.20.2 - April 2020
 
 * The interpretation of the language preferences on macOS has been improved,
   especially in the case where a system locale does not exist for the
