xgettext: Add Ruby support.
* gettext-tools/src/x-ruby.h: New file.
* gettext-tools/src/x-ruby.c: New file.
* gettext-tools/src/xgettext.h (verbose): New declaration.
* gettext-tools/src/xgettext.c: Include x-ruby.h.
(verbose): New declaration.
(flag_table_ruby): New variable.
(long_options): Add '--verbose'.
(main): Update for Ruby. Handle '-v'/'--verbose' option.
(usage): Document the '-L Ruby' and '-v' options.
(xgettext_record_flag, language_to_extractor, extension_to_language): Update for
Ruby.
* gettext-tools/src/Makefile.am (noinst_HEADERS): Add x-ruby.h.
(xgettext_SOURCES): Add x-ruby.c.
* gettext-tools/src/FILES: Mention x-ruby.h, x-ruby.c.
* gettext-tools/tests/xgettext-ruby-1: New file.
* gettext-tools/tests/format-ruby-1: New file.
* gettext-tools/tests/format-ruby-2: New file.
* gettext-tools/tests/Makefile.am (TESTS): Add them.
* gettext-tools/doc/gettext.texi (Ruby): New section.
* gettext-tools/doc/xgettext.texi: Document the '-L Ruby' and '-v' options.
* HACKING: Document the recommended Ruby packages.
* NEWS: Mention the Ruby support.

--- a/HACKING
+++ b/HACKING
@@ -142,6 +142,13 @@ are skipped. To this effect, you need to install also:
     + Homepage: http://www.php.net/
     + Ubuntu package: php
 
+  * Ruby
+    + Homepage: https://www.ruby-lang.org/en/
+    + Ubuntu package: ruby
+  * The ruby-gettext package
+    + Homepage: https://ruby-gettext.github.io/
+    + Ubuntu package: ruby-gettext
+
   * lua
     + Homepage: https://www.lua.org/
     + Ubuntu package: lua5.2 or lua5.1
