--- a/gettext-tools/doc/xgettext.texi
+++ b/gettext-tools/doc/xgettext.texi
@@ -1,5 +1,5 @@
 @c This file is part of the GNU gettext manual.
-@c Copyright (C) 1995-2019 Free Software Foundation, Inc.
+@c Copyright (C) 1995-2020 Free Software Foundation, Inc.
 @c See the file gettext.texi for copying conditions.
 
 @pindex xgettext
@@ -76,9 +76,9 @@ Specifies the language of the input files.  The supported languages
 are @code{C}, @code{C++}, @code{ObjectiveC}, @code{PO}, @code{Shell},
 @code{Python}, @code{Lisp}, @code{EmacsLisp}, @code{librep}, @code{Scheme},
 @code{Smalltalk}, @code{Java}, @code{JavaProperties}, @code{C#}, @code{awk},
-@code{YCP}, @code{Tcl}, @code{Perl}, @code{PHP}, @code{GCC-source},
-@code{NXStringTable}, @code{RST}, @code{RSJ}, @code{Glade}, @code{Lua},
-@code{JavaScript}, @code{Vala}, @code{GSettings}, @code{Desktop}.
+@code{YCP}, @code{Tcl}, @code{Perl}, @code{PHP}, @code{Ruby},
+@code{GCC-source}, @code{NXStringTable}, @code{RST}, @code{RSJ}, @code{Glade},
+@code{Lua}, @code{JavaScript}, @code{Vala}, @code{GSettings}, @code{Desktop}.
 
 @item -C
 @itemx --c++
@@ -641,5 +641,11 @@ Display this help and exit.
 @opindex -V@r{, @code{xgettext} option}
 @opindex --version@r{, @code{xgettext} option}
 Output version information and exit.
+
+@item -v
+@itemx --verbose
+@opindex -v@r{, @code{xgettext} option}
+@opindex --verbose@r{, @code{xgettext} option}
+Increase verbosity level.
 
 @end table
